Criação de filmes e séries

--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -1,17 +1,61 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab 2
+      Séries
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content color="medium">
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+  <ion-card color="dark">
+   <ion-card-header>
+     <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/56v2KjBlU4XaOv9rVYEQypROD7P.jpg">
+   </ion-card-header>
+
+    <ion-item color="dark">
+      <h1>Stranger Things <span>(2016)</span></h1>
+    </ion-item>
+    
+    <ion-item color="medium">
+      <div class="info ion-text-center">
+        <span class="tipo">Tv-14</span> <span class="duracao">50m</span>
+        <p>Mistério, Ficção Científica e Fantasia, Drama
+      </div>
+    </ion-item>
+
+    <ion-item color="dark">
+      <div>
+        <h2> Sinopse</h2>
+        <p>Quando um garoto desaparece, uma pequena cidade descobre um mistério envolvendo experimentos secretos, terríveis forças sobrenaturais e uma garotinha estranha.</p>
+      </div>
+    </ion-item>
+
+  </ion-card> 
+
+  <ion-card color="dark">
+   <ion-card-header>
+     <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/b5lKppEquuQWm6fTjGcu2g8FJgs.jpg">
+   </ion-card-header>
+
+    <ion-item color="dark">
+      <h1>Stargirl<span>(2020)</span></h1>
+    </ion-item>
+    
+    <ion-item color="medium">
+      <div class="info ion-text-center">
+        <span class="tipo">Tv-14</span> <span class="duracao">50m</span>
+        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime
+      </div>
+    </ion-item>
+
+    <ion-item color="dark">
+      <div>
+        <h2> Sinopse</h2>
+        <p>Courtney Whitmore, uma garota inteligente, atlética e acima de tudo gentil, descobre que seu padrasto tem um segredo; ele costumava ser o companheiro de um super-herói. "Emprestando" a equipe cósmica do herói, há muito perdida, ela se torna a inspiração improvável para uma geração inteiramente nova de super-heróis.</p>
+      </div>
+    </ion-item>
+
+  </ion-card> 
+
 </ion-content>
