--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -1,17 +1,60 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
+<ion-header>
+  <ion-toolbar color="secondary">
     <ion-title>
-      Tab 1
+      Filmes
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content color="dark">
+  <div class="banner">
+    <div class="info-banner">
+      <h2>Wonder Woman</h2>
+      <p>2017  &nbsp;&nbsp; </p>
+      <ion-button color="danger" size="small">Assistir</ion-button>
+      <ion-button fill="outline" color="light" size="small">Episódios</ion-button>
+    </div>
+  </div>
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+  <ion-grid>
+    <h1>Populares</h1>
+  <ion-row>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/h4VB6m0RwcicVEZvzftYZyKXs6K.jpg">
+    </ion-col>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/udDclJoHjfjb8Ekgsd4FDteOkCU.jpg">
+    </ion-col>
+  </ion-row>
+
+  <h1>Em Cartaz</h1>
+  <ion-row>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/st4n0FALlo0twLkSqxAvU15SKvU.jpg">
+    </ion-col>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/zwgPO5bamUuajIAEc02q9XZ2qhq.jpg">
+    </ion-col>
+  </ion-row>
+
+  <h1>Próximas Estréias</h1>
+  <ion-row>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/mDYG6e2ycBoG8YzSz1nW28t2Gxe.jpg">
+    </ion-col>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/mT4shYF9Lc9lyHwwrGxx0fHk7XH.jpg">
+    </ion-col>
+  </ion-row>
+
+  <h1>Mais Bem Avaliados</h1>
+  <ion-row>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/qJ2tW6WMUDux911r6m7haRef0WH.jpg">
+    </ion-col>
+    <ion-col>
+      <img src="https://image.tmdb.org/t/p/w220_and_h330_face/7BuH8itoSrLExs2YZSsM01Qk2no.jpg">
+    </ion-col>
+  </ion-row>
+  </ion-grid>
 </ion-content>
