tentativa de desing

--- a/src/app/filmes/birds-of-prey/birds-of-prey.page.html
+++ b/src/app/filmes/birds-of-prey/birds-of-prey.page.html
@@ -1,9 +1,31 @@
 <ion-header>
+
   <ion-toolbar>
-    <ion-title>birdsOfPrey</ion-title>
+    <ion-title>Birds Of Prey: And The Fantabulous Emancipation of One Harley Quinn</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
 <ion-content>
+
+<div class="banner">
+    <div class="info-banner">
+      <img class="posterA" >
+    </div>
+</div>
+
+<div class="info">
+<ion-item color="dark">
+    <div class="info ion-text-center">
+      <span class="duracao">1h 49m</span>
+      <p>Ação, Crime, Comédia
+    </div>
+</ion-item>
+</div>
+
+<div class="sinopse">
+  <h2>Sinopse</h2>
+  <p>Arlequina, Canário Negro, Caçadora, Cassandra Cain e a policial Renée Montoya formam um grupo inusitado de heroínas. Quando um perigoso criminoso começa a causar destruição em Gotham, as cinco mulheres precisam se unir para defender a cidade.</p>
+</div>
 
 </ion-content>
