--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -19,10 +19,10 @@
   <ion-grid>
     <h1>Populares</h1>
   <ion-row>
-    <ion-col>
+    <ion-col routerLink="/birds-of-prey">
       <img src="https://image.tmdb.org/t/p/w220_and_h330_face/h4VB6m0RwcicVEZvzftYZyKXs6K.jpg">
     </ion-col>
-    <ion-col>
+    <ion-col routerLink="/joker">
       <img src="https://image.tmdb.org/t/p/w220_and_h330_face/udDclJoHjfjb8Ekgsd4FDteOkCU.jpg">
     </ion-col>
   </ion-row>
