aves de rapina pronto

--- a/src/app/filmes/birds-of-prey/birds-of-prey.page.html
+++ b/src/app/filmes/birds-of-prey/birds-of-prey.page.html
@@ -1,31 +1,115 @@
 <ion-header>
 
-  <ion-toolbar>
+  <ion-toolbar color="verde">
     <ion-title>Birds Of Prey: And The Fantabulous Emancipation of One Harley Quinn</ion-title>
   </ion-toolbar>
 
 </ion-header>
 
 <ion-content>
-
 <div class="banner">
-    <div class="info-banner">
-      <img class="posterA" >
-    </div>
+  <img src="https://www.torredevigilancia.com/wp-content/uploads/2019/12/IMG_20191206_1448042-810x481.jpg">
 </div>
+<ion-card>
+  <ion-card-header>
+    <ion-item >
+      <ion-icon name="people-circle-outline"></ion-icon>
+      <ion-label>
+        Avaliação dos Usuários
+      </ion-label>
 
-<div class="info">
-<ion-item color="dark">
-    <div class="info ion-text-center">
-      <span class="duracao">1h 49m</span>
-      <p>Ação, Crime, Comédia
-    </div>
-</ion-item>
-</div>
+      <div slot="end" class="c100 p72 small green">
+        <span>72%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-card-header>
 
-<div class="sinopse">
-  <h2>Sinopse</h2>
-  <p>Arlequina, Canário Negro, Caçadora, Cassandra Cain e a policial Renée Montoya formam um grupo inusitado de heroínas. Quando um perigoso criminoso começa a causar destruição em Gotham, as cinco mulheres precisam se unir para defender a cidade.</p>
-</div>
+  <ion-item color="verde">
+      <div class="info ion-text-center">
+        <span class="duracao">1h49m</span>
+        <p>Ação, Crime, Comédia</p>
+      </div>
+    </ion-item>
+
+  <ion-card-header>
+    <ion-card-subtitle>2020</ion-card-subtitle>
+    <ion-card-title>Sinopse</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    Arlequina, Canário Negro, Caçadora, Cassandra Cain e a policial Renée Montoya formam um grupo inusitado de heroínas. Quando um perigoso criminoso começa a causar destruição em Gotham, as cinco mulheres precisam se unir para defender a cidade.
+  </ion-card-content>
+</ion-card>
+
+<ion-list>
+  <ion-card-title class="info ion-text-center">Elenco Principal</ion-card-title>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img3.acsta.net/pictures/19/11/12/22/54/0812791.jpg">
+    </ion-thumbnail>
+    <ion-label>Margot Robbie</ion-label>
+    <ion-card-subtitle>Harley Quinn</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img3.acsta.net/pictures/20/01/06/23/43/4712915.jpg">
+      </ion-thumbnail>
+    <ion-label>Ewan McGregor</ion-label>
+    <ion-card-subtitle>Black Mask</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://i.pinimg.com/originals/18/98/99/18989970d2273085626481109eb4564d.jpg">
+      </ion-thumbnail>
+    <ion-label>Mary Elizabeth Winstead</ion-label>
+    <ion-card-subtitle>Huntress</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://media.gettyimages.com/photos/jurnee-smollettbell-attends-the-art-of-elysiums-11th-annual-on-6-picture-id902017554?s=612x612">
+      </ion-thumbnail>
+    <ion-label>jurnee Smollett-Bell</ion-label>
+    <ion-card-subtitle>Black Canary</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://upload.wikimedia.org/wikipedia/commons/7/77/Rosie_Perez_2012.jpg">
+      </ion-thumbnail>
+    <ion-label>Rosie Perez</ion-label>
+    <ion-card-subtitle>Dectetive Renée Montoya</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://media1.popsugar-assets.com/files/thumbor/Rc4G6ud-KpUI8a5D1l4NO8fLtj4/0x158:3072x3230/fit-in/2048xorig/filters:format_auto-!!-:strip_icc-!!-/2020/01/28/746/n/44701584/ea476ebb5e30673b492190.74598998_/i/who-is-ella-jay-basco.jpg">
+      </ion-thumbnail>
+    <ion-label>Ella Jay Basco</ion-label>
+    <ion-card-subtitle>Cassandra Cain</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img2.acsta.net/pictures/15/02/23/23/54/467152.jpg">
+      </ion-thumbnail>
+    <ion-label>Chris Messina</ion-label>
+    <ion-card-subtitle>Victor Zsasz</ion-card-subtitle>
+  </ion-item>
+</ion-list>
 
 </ion-content>
