--- a/src/app/filmes/birds-of-prey/birds-of-prey.page.html
+++ b/src/app/filmes/birds-of-prey/birds-of-prey.page.html
@@ -6,13 +6,14 @@
 
 </ion-header>
 
-<ion-content>
+<ion-content color ="verdemusgo">
 <div class="banner">
   <img src="https://www.torredevigilancia.com/wp-content/uploads/2019/12/IMG_20191206_1448042-810x481.jpg">
 </div>
-<ion-card>
+
+<ion-card color="verde">
   <ion-card-header>
-    <ion-item >
+    <ion-item color="verde">
       <ion-icon name="people-circle-outline"></ion-icon>
       <ion-label>
         Avaliação dos Usuários
@@ -28,7 +29,7 @@
     </ion-item>
   </ion-card-header>
 
-  <ion-item color="verde">
+  <ion-item class="info" color="verdemusgo">
       <div class="info ion-text-center">
         <span class="duracao">1h49m</span>
         <p>Ação, Crime, Comédia</p>
@@ -45,8 +46,11 @@
   </ion-card-content>
 </ion-card>
 
+<ion-card>
 <ion-list>
-  <ion-card-title class="info ion-text-center">Elenco Principal</ion-card-title>
+  <ion-card-title class="info ion-text-center">
+    <h1>Elenco Principal</h1>
+  </ion-card-title>
 
   <ion-item >
     <ion-thumbnail slot="start">
@@ -111,5 +115,6 @@
     <ion-card-subtitle>Victor Zsasz</ion-card-subtitle>
   </ion-item>
 </ion-list>
+</ion-card>
 
 </ion-content>
