--- a/src/app/filmes/joker/joker.page.html
+++ b/src/app/filmes/joker/joker.page.html
@@ -1,9 +1,120 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>joker</ion-title>
+
+  <ion-toolbar color="vermelho">
+    <ion-title>Joker</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
+<ion-content color ="vermelhoesc">
+<div class="banner">
+  <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/f5F4cRhQdUbyVbB5lTNCwUzD6BP.jpg">
+</div>
+
+<ion-card color="vermelho">
+  <ion-card-header>
+    <ion-item color="vermelho">
+      <ion-icon name="people-circle-outline"></ion-icon>
+      <ion-label>
+        Avaliação dos Usuários
+      </ion-label>
+
+      <div slot="end" class="c100 p82 small green">
+        <span>82%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-card-header>
+
+  <ion-item class="info" color="vermelhoesc">
+      <div class="info ion-text-center">
+        <span class="duracao">2h02m</span>
+        <p>Ação, Thriller, Comédia</p>
+      </div>
+    </ion-item>
+
+  <ion-card-header>
+    <ion-card-subtitle>2019</ion-card-subtitle>
+    <ion-card-title>Sinopse</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+    Arthur Fleck trabalha como palhaço para uma agência de talentos e, toda semana, precisa comparecer a uma agente social, devido aos seus conhecidos problemas mentais. Após ser demitido, Fleck reage mal à gozação de três homens em pleno metrô e os mata. Os assassinatos iniciam um movimento popular contra a elite de Gotham City, da qual Thomas Wayne é seu maior representante.
+  </ion-card-content>
+</ion-card>
+
+<ion-card>
+<ion-list>
+  <ion-card-title class="info ion-text-center">
+    <h1>Elenco Principal</h1>
+  </ion-card-title>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://upload.wikimedia.org/wikipedia/commons/d/d1/Joaquin_Phoenix_in_2018.jpg">
+    </ion-thumbnail>
+    <ion-label>Joaquin Phoenix</ion-label>
+    <ion-card-subtitle>Arthur Fleck/Joker</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img3.acsta.net/pictures/15/09/16/17/30/201281.jpg">
+      </ion-thumbnail>
+    <ion-label>Robert De Niro</ion-label>
+    <ion-card-subtitle>Murray Franklin</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img3.acsta.net/pictures/19/11/26/23/20/0444545.jpg">
+      </ion-thumbnail>
+    <ion-label>Zazie Beetz</ion-label>
+    <ion-card-subtitle>Sophie Dumond</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img3.acsta.net/pictures/15/06/29/13/14/250948.jpg">
+      </ion-thumbnail>
+    <ion-label>Frances Conroy</ion-label>
+    <ion-card-subtitle>Penny Fleck</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://limaomecanico.com.br/wp-content/uploads/2018/02/brett-cullen.jpg">
+      </ion-thumbnail>
+    <ion-label>Brett Cullen</ion-label>
+    <ion-card-subtitle>Thomas Wayne</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://i.pinimg.com/736x/be/dc/ce/bedcce6594008a0757c80cee6eba65c9.jpg">
+      </ion-thumbnail>
+    <ion-label>Shea Whinham</ion-label>
+    <ion-card-subtitle>Detective Burke</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://www.gstatic.com/tv/thumb/persons/281686/281686_v9_bb.jpg">
+      </ion-thumbnail>
+    <ion-label>Bill Camp</ion-label>
+    <ion-card-subtitle>Detective Garrity</ion-card-subtitle>
+  </ion-item>
+</ion-list>
+</ion-card>
 
 </ion-content>
