--- a/src/app/series/stranger-things/stranger-things.page.html
+++ b/src/app/series/stranger-things/stranger-things.page.html
@@ -1,9 +1,138 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>strangerThings</ion-title>
+
+  <ion-toolbar color="azulc">
+    <ion-title>Stargirl</ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
+<ion-content color="https://s1.1zoom.me/big0/55/Stars_Sky_454921.jpg">
+<div class="banner">
+  <img src="https://cosmicbook.news/sites/default/files/stargirl-characters-poster.jpg">
+</div>
+
+<ion-card color="azulc">
+  <ion-card-header>
+    <ion-item color="azulc">
+      <ion-icon name="people-circle-outline"></ion-icon>
+      <ion-label>
+        Avaliação dos Usuários
+      </ion-label>
+
+      <div slot="end" class="c100 p81 small green">
+        <span>81%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-card-header>
+
+  <ion-item class="info" color="azule">
+      <div class="info ion-text-center">
+        <span class="duracao">50m</span>
+        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
+      </div>
+    </ion-item>
+
+  <ion-card-header>
+    <ion-card-subtitle>2016</ion-card-subtitle>
+    <ion-card-title>Sinopse</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+   Quando um garoto desaparece, uma pequena cidade descobre um mistério envolvendo experimentos secretos, terríveis forças sobrenaturais e uma garotinha estranha.
+  </ion-card-content>
+</ion-card>
+
+<ion-card>
+<ion-list>
+  <ion-card-title class="info ion-text-center">
+    <h1>Elenco Principal</h1>
+  </ion-card-title>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://3.bp.blogspot.com/-XkvDBxoEUP4/WdAzklYkrVI/AAAAAAAAhMQ/pxF7GcsV50Q_zsJJGz2UelkwRliPxwb5QCLcBGAs/s1600/brec-bassinger-knott-s-scary-farm-00001.jpg">
+    </ion-thumbnail>
+    <ion-label>Winona Ryder</ion-label>
+    <ion-card-subtitle>Joyce Byers</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://3.bp.blogspot.com/-XkvDBxoEUP4/WdAzklYkrVI/AAAAAAAAhMQ/pxF7GcsV50Q_zsJJGz2UelkwRliPxwb5QCLcBGAs/s1600/brec-bassinger-knott-s-scary-farm-00001.jpg">
+    </ion-thumbnail>
+    <ion-label>Millie Bobbby Brown</ion-label>
+    <ion-card-subtitle>Eleven</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://br.web.img2.acsta.net/pictures/19/06/12/00/56/1764784.jpg">
+      </ion-thumbnail>
+    <ion-label>David Harbour</ion-label>
+    <ion-card-subtitle>Jim Hopper</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://pbs.twimg.com/profile_images/1172779493557096448/Lrr9Q-JZ_400x400.jpg">
+      </ion-thumbnail>
+    <ion-label>Finn Wolfhard</ion-label>
+    <ion-card-subtitle>Mike Wheeler</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://uploads.jovemnerd.com.br/wp-content/uploads/2018/02/luke-wilson-760x428.jpg">
+      </ion-thumbnail>
+    <ion-label>Gaten Matarazzo</ion-label>
+    <ion-card-subtitle>Dustin Henderson</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Amy_Smart_%282009%29.jpg">
+      </ion-thumbnail>
+    <ion-label>Caleb McLaughlin</ion-label>
+    <ion-card-subtitle>Lucas Sinclair</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Amy_Smart_%282009%29.jpg">
+      </ion-thumbnail>
+    <ion-label>Sadie Sink</ion-label>
+    <ion-card-subtitle>Max Mayfield</M></ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://limaomecanico.com.br/wp-content/uploads/2019/12/hunter-sansone-400x650.jpg">
+      </ion-thumbnail>
+    <ion-label>Natalia Dyer</ion-label>
+    <ion-card-subtitle>Nacy Wheeler</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://m.media-amazon.com/images/M/MV5BYTRkZjRkYmMtMGU5Yi00MzBkLTlkNTctMmQ4NmY0MjgyYjQ3XkEyXkFqcGdeQXVyMjQwMDg0Ng@@._V1_UY1200_CR85,0,630,1200_AL_.jpg">
+      </ion-thumbnail>
+    <ion-label>Charlie Heaton</ion-label>
+    <ion-card-subtitle>Jonathan Byers</ion-card-subtitle>
+  </ion-item>
+</ion-list>
+</ion-card>
 
 </ion-content>
