--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -9,7 +9,7 @@
 <ion-content color="medium">
 
   <ion-card color="dark">
-   <ion-card-header>
+   <ion-card-header routerLink="/stranger-things">
      <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/56v2KjBlU4XaOv9rVYEQypROD7P.jpg">
    </ion-card-header>
 
@@ -20,7 +20,7 @@
     <ion-item color="medium">
       <div class="info ion-text-center">
         <span class="tipo">Tv-14</span> <span class="duracao">50m</span>
-        <p>Mistério, Ficção Científica e Fantasia, Drama
+        <p>Mistério, Ficção Científica e Fantasia, Drama</p>
       </div>
     </ion-item>
 
@@ -34,8 +34,8 @@
   </ion-card> 
 
   <ion-card color="dark">
-   <ion-card-header>
-     <img src="https://image.tmdb.org/t/p/w533_and_h300_bestv2/b5lKppEquuQWm6fTjGcu2g8FJgs.jpg">
+   <ion-card-header routerLink="/stargirl">
+     <img src="https://i0.wp.com/ahoradoplay.com/wp-content/uploads/2020/03/stargirl-novos-cartazes.jpg?fit=800%2C445&ssl=1&resize=1280%2C720">
    </ion-card-header>
 
     <ion-item color="dark">
@@ -45,7 +45,7 @@
     <ion-item color="medium">
       <div class="info ion-text-center">
         <span class="tipo">Tv-14</span> <span class="duracao">50m</span>
-        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime
+        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
       </div>
     </ion-item>
 
