--- a/src/app/filmes/birds-of-prey/birds-of-prey.page.scss
+++ b/src/app/filmes/birds-of-prey/birds-of-prey.page.scss
@@ -1,11 +1,11 @@
 .banner{
   background-position: center;
   background-repeat: no-repeat;
-  
-  height: 180px;
+  background-size: cover;
+  height: 190px;
   width: 100%;
   position: relative;
-  padding: 15px;
+  padding: 13px;
 }
 
 .duracao{
@@ -25,4 +25,15 @@
   height: 60px;
   size: 60;
   border-radius: 50%;
+}
+
+h1{
+    font-size: 20px;
+    font-weight: bolder;
+    margin-bottom: 5px;
+    color: #315e3e;
+}
+
+.info{
+  margin-top: 15px;
 }
