--- a/src/app/desenhos/liga-da-justica/liga-da-justica.page.html
+++ b/src/app/desenhos/liga-da-justica/liga-da-justica.page.html
@@ -1,9 +1,127 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>ligaDaJustica</ion-title>
+
+  <ion-toolbar color="acla">
+    <ion-title>Justice League Dark: Apokolips War </ion-title>
   </ion-toolbar>
+
 </ion-header>
 
-<ion-content>
+<ion-content color="aesc">
+<div class="banner">
+  <img src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q80/wp-content/uploads/2020/05/legiao_YLvGDXiKa8ku.jpg.jpeg">
+</div>
+
+<ion-card color="acla">
+  <ion-card-header>
+    <ion-item color="acla">
+      <ion-icon name="people-circle-outline"></ion-icon>
+      <ion-label>
+        Avaliação dos Usuários
+      </ion-label>
+
+      <div slot="end" class="c100 p85 small green">
+        <span>85%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
+  </ion-card-header>
+
+  <ion-item class="info" color="aesc">
+      <div class="info ion-text-center">
+        <span class="duracao">1h30m</span>
+        <p>Mistério, Sci-Fi & Fantasy Drama</p>
+      </div>
+    </ion-item>
+
+  <ion-card-header>
+    <ion-card-subtitle>2020</ion-card-subtitle>
+    <ion-card-title>Sinopse</ion-card-title>
+  </ion-card-header>
+
+  <ion-card-content>
+   O filme-animado é uma sequência de Liga da Justiça Sombria, animação de 2017 com classificação para maiores. Na trama, Batman reunia um grupo de heróis mágicos para lidar com ameaças sobrenaturais. Entre a galeria de heróis da Liga da Justiça Sombria, temos Constantine, Monstro do Pântano, Zatanna, Etrigan, entre outros. É aguardado a aparição de alguns personagens como Darkseid, as Fúrias e até mesmo o Pai Celestial.
+  </ion-card-content>
+</ion-card>
+
+<ion-card>
+<ion-list>
+  <ion-card-title class="info ion-text-center">
+    <h1>Elenco Principal</h1>
+  </ion-card-title>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://i.pinimg.com/236x/11/13/59/11135937637af20bf387c09f35661b5f--matt-ryan-constantine-constantine-nbc.jpg">
+    </ion-thumbnail>
+    <ion-label>Matt Ryan</ion-label>
+    <ion-card-subtitle>John Constantine</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://vignette.wikia.nocookie.net/dcmovies/images/0/04/Jerry_O%27Connell.jpg/revision/latest/scale-to-width-down/340?cb=20110508122628">
+      </ion-thumbnail>
+    <ion-label>Jerry O'Connell</ion-label>
+    <ion-card-subtitle>Superman</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://pm1.narvii.com/6361/06df6e13f339d1352728a9338a6d0ccc755881fe_hq.jpg">
+      </ion-thumbnail>
+    <ion-label>Taissa Farmiga</ion-label>
+    <ion-card-subtitle>Raven</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://vz.cnwimg.com/thumb-1200x/wp-content/uploads/2011/09/Jason-OMara.jpg">
+      </ion-thumbnail>
+    <ion-label>Jason O'Mara</ion-label>
+    <ion-card-subtitle>Batman</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://vignette.wikia.nocookie.net/dublagempedia/images/e/e1/Sddefault.jpg/revision/latest/scale-to-width-down/340?cb=20200411193140&path-prefix=pt-br">
+      </ion-thumbnail>
+    <ion-label>Rosario Dawson</ion-label>
+    <ion-card-subtitle>Wonder Woman</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://m.media-amazon.com/images/M/MV5BYjNhMjcxZGMtNDBmNC00OTBjLTg3ZWYtMDk4NWI4Y2E0N2JjXkEyXkFqcGdeQXVyMzY2MjI5NTE@._V1_.jpg">
+      </ion-thumbnail>
+    <ion-label>Stuart Allan</ion-label>
+    <ion-card-subtitle>Robin</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item >
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://bucknellian.net/wp-content/uploads/2020/01/Wilson_Rainn-Headshot-3.png">
+      </ion-thumbnail>
+    <ion-label>Rainn Wilson</ion-label>
+    <ion-card-subtitle>Lex Luthor</ion-card-subtitle>
+  </ion-item>
+
+</ion-list>
+</ion-card>
+
+<ion-card>
+  <ion-card-header class="info ion-text-center">
+    <h1>"The war to end all wars."</h1>
+  </ion-card-header>
+</ion-card>
 
 </ion-content>
