--- a/src/app/filmes/birds-of-prey/birds-of-prey.page.html
+++ b/src/app/filmes/birds-of-prey/birds-of-prey.page.html
@@ -117,4 +117,10 @@
 </ion-list>
 </ion-card>
 
+<ion-card>
+  <ion-card-header class="info ion-text-center">
+    <h1>"Mind Over Mayhem!"</h1>
+  </ion-card-header>
+</ion-card>
+
 </ion-content>
