--- a/src/app/series/stargirl/stargirl.page.html
+++ b/src/app/series/stargirl/stargirl.page.html
@@ -8,11 +8,11 @@
 
 <ion-content color="dourado">
 <div class="banner">
-  <img src="https://cosmicbook.news/sites/default/files/stargirl-characters-poster.jpg">
+  <img src="https://i0.wp.com/ahoradoplay.com/wp-content/uploads/2020/03/stargirl-novos-cartazes.jpg?fit=800%2C445&ssl=1&resize=1280%2C720">
 </div>
 
 <ion-card color="amarelo">
-  <ion-card-header>
+  <ion-card-header class="avaliacao">
     <ion-item color="amarelo">
       <ion-icon name="people-circle-outline"></ion-icon>
       <ion-label>
@@ -32,7 +32,7 @@
   <ion-item class="info" color="dourado">
       <div class="info ion-text-center">
         <span class="duracao">43m</span>
-        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
+        <p>Ação e Aventura, Ficção Científica e Fantasia, Drama, Crime</p>
       </div>
     </ion-item>
 
@@ -115,6 +115,12 @@
     <ion-card-subtitle>Rick Tyler/Hourman</ion-card-subtitle>
   </ion-item>
 </ion-list>
+</ion-card>
+
+<ion-card>
+  <ion-card-header class="info ion-text-center">
+    <h1>"A new generation of justice."</h1>
+  </ion-card-header>
 </ion-card>
 
 </ion-content>
