--- a/src/app/series/stargirl/stargirl.page.scss
+++ b/src/app/series/stargirl/stargirl.page.scss
@@ -1,7 +1,3 @@
-ion-content{
-  background-image:url ('https://s1.1zoom.me/big0/55/Stars_Sky_454921.jpg');
-}
-
 .banner{
   background-position: center;
   background-repeat: no-repeat;
@@ -35,9 +31,13 @@ h1{
     font-size: 20px;
     font-weight: bolder;
     margin-bottom: 5px;
-    color: #2a487d;
+    color: #baa551;
 }
 
 .info{
   margin-top: 15px;
+}
+
+.avaliacao{
+  margin-top: 20px;
 }
