--- a/src/app/series/stranger-things/stranger-things.page.scss
+++ b/src/app/series/stranger-things/stranger-things.page.scss
@@ -3,9 +3,9 @@
   }
 
   p{
-    margin-left: 0px;
+    margin-left: 90px;
     padding: 0px;
-    margin: 0;
+    margin: 5;
     margin-top: 5px;
   }
 
@@ -21,7 +21,7 @@ h1{
     font-size: 20px;
     font-weight: bolder;
     margin-bottom: 5px;
-    color: #2a487d;
+    color: #712d84;
 }
 
 .info{
