--- a/src/app/tab2/tab2.page.html
+++ b/src/app/tab2/tab2.page.html
@@ -35,7 +35,7 @@
 
   <ion-card color="dark">
    <ion-card-header routerLink="/stargirl">
-     <img src="https://i0.wp.com/ahoradoplay.com/wp-content/uploads/2020/03/stargirl-novos-cartazes.jpg?fit=800%2C445&ssl=1&resize=1280%2C720">
+     <img src="https://cosmicbook.news/sites/default/files/stargirl-characters-poster.jpg">
    </ion-card-header>
 
     <ion-item color="dark">
@@ -45,7 +45,7 @@
     <ion-item color="medium">
       <div class="info ion-text-center">
         <span class="tipo">Tv-14</span> <span class="duracao">50m</span>
-        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
+        <p>Ação e Aventura, Ficção Científica e Fantasia, Drama, Crime</p>
       </div>
     </ion-item>
 
