--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -14,7 +14,7 @@
         <img
           src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q80/wp-content/uploads/2020/03/legiao_Xj4yoA_U1VrHKFsZJquWhRC73GeiQwxETdIpgYtm98.jpg.jpeg">
       </ion-thumbnail>
-      <ion-label>
+      <ion-label routerLink="/liga-da-justica">
         Liga da Justiça Sombria: Guerra de Apokolips
       </ion-label>
 
