--- a/src/app/filmes/joker/joker.page.html
+++ b/src/app/filmes/joker/joker.page.html
@@ -117,4 +117,11 @@
 </ion-list>
 </ion-card>
 
+<ion-card>
+  <ion-card-header class="info ion-text-center">
+    <h1>"Put on a happy face."</h1>
+  </ion-card-header>
+</ion-card>
+
+
 </ion-content>
