--- a/src/app/series/stranger-things/stranger-things.page.html
+++ b/src/app/series/stranger-things/stranger-things.page.html
@@ -1,26 +1,26 @@
 <ion-header>
 
-  <ion-toolbar color="azulc">
-    <ion-title>Stargirl</ion-title>
+  <ion-toolbar color="roxoc">
+    <ion-title>Stranger things</ion-title>
   </ion-toolbar>
 
 </ion-header>
 
-<ion-content color="https://s1.1zoom.me/big0/55/Stars_Sky_454921.jpg">
+<ion-content color="roxoe">
 <div class="banner">
-  <img src="https://cosmicbook.news/sites/default/files/stargirl-characters-poster.jpg">
+  <img src="https://seriesemcena.com.br/wp-content/uploads/2019/06/stranger-things-terceira-temporada.jpg">
 </div>
 
-<ion-card color="azulc">
+<ion-card color="roxoc">
   <ion-card-header>
-    <ion-item color="azulc">
+    <ion-item color="roxoc">
       <ion-icon name="people-circle-outline"></ion-icon>
       <ion-label>
         Avaliação dos Usuários
       </ion-label>
 
-      <div slot="end" class="c100 p81 small green">
-        <span>81%</span>
+      <div slot="end" class="c100 p85 small green">
+        <span>85%</span>
         <div class="slice">
           <div class="bar"></div>
           <div class="fill"></div>
@@ -29,10 +29,10 @@
     </ion-item>
   </ion-card-header>
 
-  <ion-item class="info" color="azule">
+  <ion-item class="info" color="roxoe">
       <div class="info ion-text-center">
         <span class="duracao">50m</span>
-        <p>Ação e Aventur, Ficção Científica e Fantasia, Drama, Crime</p>
+        <p>Mistério, Sci-Fi & Fantasy Drama</p>
       </div>
     </ion-item>
 
@@ -55,25 +55,16 @@
   <ion-item >
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://3.bp.blogspot.com/-XkvDBxoEUP4/WdAzklYkrVI/AAAAAAAAhMQ/pxF7GcsV50Q_zsJJGz2UelkwRliPxwb5QCLcBGAs/s1600/brec-bassinger-knott-s-scary-farm-00001.jpg">
+          src="https://pbs.twimg.com/media/D6KEmu0XsAA7Ltc.jpg">
     </ion-thumbnail>
-    <ion-label>Winona Ryder</ion-label>
-    <ion-card-subtitle>Joyce Byers</ion-card-subtitle>
+    <ion-label>Noah Schnapp</ion-label>
+    <ion-card-subtitle>Will Byers</ion-card-subtitle>
   </ion-item>
 
   <ion-item >
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://3.bp.blogspot.com/-XkvDBxoEUP4/WdAzklYkrVI/AAAAAAAAhMQ/pxF7GcsV50Q_zsJJGz2UelkwRliPxwb5QCLcBGAs/s1600/brec-bassinger-knott-s-scary-farm-00001.jpg">
-    </ion-thumbnail>
-    <ion-label>Millie Bobbby Brown</ion-label>
-    <ion-card-subtitle>Eleven</ion-card-subtitle>
-  </ion-item>
-
-  <ion-item >
-    <ion-thumbnail slot="start">
-        <img class="redondo"
-          src="https://br.web.img2.acsta.net/pictures/19/06/12/00/56/1764784.jpg">
+          src="https://quartaparedepop.com.br/wp-content/uploads/2019/04/david-harbour-1-1280x720.jpg">
       </ion-thumbnail>
     <ion-label>David Harbour</ion-label>
     <ion-card-subtitle>Jim Hopper</ion-card-subtitle>
@@ -82,7 +73,16 @@
   <ion-item >
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://pbs.twimg.com/profile_images/1172779493557096448/Lrr9Q-JZ_400x400.jpg">
+          src="https://i.pinimg.com/originals/c5/0a/ea/c50aead2f93c74d77058de98a8a7e02b.jpg">
+      </ion-thumbnail>
+    <ion-label>Millie Bobby Brown</ion-label>
+    <ion-card-subtitle>Eleven</ion-card-subtitle>
+  </ion-item>
+
+  <ion-item>
+    <ion-thumbnail slot="start">
+        <img class="redondo"
+          src="https://img.buzzfeed.com/buzzfeed-static/static/2020-03/3/20/asset/d4c0738ee5cb/sub-buzz-117-1583268747-3.jpg?crop=630%3A536%3B15%2C15&downsize=700%3A%2A&output-quality=auto&output-format=auto&output-quality=auto&output-format=auto&downsize=360:*">
       </ion-thumbnail>
     <ion-label>Finn Wolfhard</ion-label>
     <ion-card-subtitle>Mike Wheeler</ion-card-subtitle>
@@ -91,48 +91,37 @@
   <ion-item>
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://uploads.jovemnerd.com.br/wp-content/uploads/2018/02/luke-wilson-760x428.jpg">
+          src="https://img.vixdata.io/pd/jpg-large/pt/sites/default/files/g/gaten-matarazzo-stranger-things-0120-1400x800.jpg">
       </ion-thumbnail>
     <ion-label>Gaten Matarazzo</ion-label>
     <ion-card-subtitle>Dustin Henderson</ion-card-subtitle>
   </ion-item>
 
-  <ion-item>
+  <ion-item >
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Amy_Smart_%282009%29.jpg">
+          src="https://br.web.img2.acsta.net/pictures/17/10/27/11/46/4938184.jpg">
       </ion-thumbnail>
     <ion-label>Caleb McLaughlin</ion-label>
     <ion-card-subtitle>Lucas Sinclair</ion-card-subtitle>
   </ion-item>
 
-  <ion-item>
+  <ion-item >
     <ion-thumbnail slot="start">
         <img class="redondo"
-          src="https://upload.wikimedia.org/wikipedia/commons/c/c3/Amy_Smart_%282009%29.jpg">
+          src="https://i.pinimg.com/originals/94/97/b1/9497b13152b5bf3b2b2400e61acf40fc.jpg">
       </ion-thumbnail>
     <ion-label>Sadie Sink</ion-label>
-    <ion-card-subtitle>Max Mayfield</M></ion-card-subtitle>
+    <ion-card-subtitle>Max Mayfield</ion-card-subtitle>
   </ion-item>
 
-  <ion-item >
-    <ion-thumbnail slot="start">
-        <img class="redondo"
-          src="https://limaomecanico.com.br/wp-content/uploads/2019/12/hunter-sansone-400x650.jpg">
-      </ion-thumbnail>
-    <ion-label>Natalia Dyer</ion-label>
-    <ion-card-subtitle>Nacy Wheeler</ion-card-subtitle>
-  </ion-item>
-
-  <ion-item >
-    <ion-thumbnail slot="start">
-        <img class="redondo"
-          src="https://m.media-amazon.com/images/M/MV5BYTRkZjRkYmMtMGU5Yi00MzBkLTlkNTctMmQ4NmY0MjgyYjQ3XkEyXkFqcGdeQXVyMjQwMDg0Ng@@._V1_UY1200_CR85,0,630,1200_AL_.jpg">
-      </ion-thumbnail>
-    <ion-label>Charlie Heaton</ion-label>
-    <ion-card-subtitle>Jonathan Byers</ion-card-subtitle>
-  </ion-item>
 </ion-list>
+</ion-card>
+
+<ion-card>
+  <ion-card-header class="info ion-text-center">
+    <h1>"It only gets stranger…"</h1>
+  </ion-card-header>
 </ion-card>
 
 </ion-content>
