--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -28,4 +28,26 @@
     </ion-item>
 
   </ion-list>
+
+   <ion-list>
+
+    <ion-item lines="full">
+      <ion-thumbnail slot="start">
+        <img
+          src="https://uauposters.com.br/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/2/0/201906131192-uau-posters-filmes-animacao-spider-man-into-spiderverse-homem-aranha-no-aranhaverso.jpg">
+      </ion-thumbnail>
+      <ion-label routerLink="/homem-aranha">
+        Homem-Aranha no Aranhaverso
+      </ion-label>
+
+      <div slot="end" class="c100 p84 small green">
+        <span>84%</span>
+        <div class="slice">
+          <div class="bar"></div>
+          <div class="fill"></div>
+        </div>
+      </div>
+    </ion-item>
+
+  </ion-list>
 </ion-content>
