detalhes bem pequenos de cor

--- a/src/app/tab3/tab3.page.html
+++ b/src/app/tab3/tab3.page.html
@@ -1,15 +1,15 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="secondary">
     <ion-title>
       Desenhos
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content>
-  <ion-list>
+<ion-content color="dark">
+  <ion-list color="dark">
 
-    <ion-item lines="full">
+    <ion-item lines="full" color="dark">
       <ion-thumbnail slot="start">
         <img
           src="https://kanto.legiaodosherois.com.br/w760-h398-gnw-cfill-q80/wp-content/uploads/2020/03/legiao_Xj4yoA_U1VrHKFsZJquWhRC73GeiQwxETdIpgYtm98.jpg.jpeg">
@@ -29,14 +29,14 @@
 
   </ion-list>
 
-   <ion-list>
+   <ion-list color="dark">
 
-    <ion-item lines="full">
+    <ion-item lines="full" color="dark">
       <ion-thumbnail slot="start">
         <img
           src="https://uauposters.com.br/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/2/0/201906131192-uau-posters-filmes-animacao-spider-man-into-spiderverse-homem-aranha-no-aranhaverso.jpg">
       </ion-thumbnail>
-      <ion-label routerLink="/homem-aranha">
+      <ion-label routerLink="/homem-aranha" >
         Homem-Aranha no Aranhaverso
       </ion-label>
 
